--- a/demo.ipynb
+++ b/demo.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,6 +619,123 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_html(logo_base64, agent_logo_base64, font_base64,company_name, established_year, team_size, location, summary, problem, solution):\n",
+    "    html_template = \"\"\"\n",
+    "<!DOCTYPE html>\n",
+    "<html lang=\"en\">\n",
+    "  <head>\n",
+    "    <meta charset=\"UTF-8\" />\n",
+    "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\" />\n",
+    "    <title>Document</title>\n",
+    "    <style>\n",
+    "    /* 嵌入字体定义 */\n",
+    "    @font-face {\n",
+    "        font-family: 'HYRunYuan';\n",
+    "        src: url(data:font/ttf;base64,{font_base64}) format('truetype');\n",
+    "    }\n",
+    "    \n",
+    "    body {{\n",
+    "        font-family: 'HYRunYuan', sans-serif;\n",
+    "    }}\n",
+    "\n",
+    "    /* 这里可以添加您的CSS样式 */\n",
+    "    /* 注意：CSS会在后续补充 */\n",
+    "    </style>\n",
+    "  </head>\n",
+    "  <body>\n",
+    "    <div class=\"music_9_57\">\n",
+    "      <div class=\"music_9_58\">\n",
+    "        <img\n",
+    "          class=\"music_9_59\"\n",
+    "          src=\"data:image/png;base64,{logo_base64}\" />\n",
+    "        <div class=\"music_9_60\">\n",
+    "          <span class=\"music_9_60_0_8\">{company_name}</span>\n",
+    "          <span class=\"music_9_60_8_44\">\n",
+    "            <br />成立年份：{established_year}\n",
+    "            <br />团队规模：{team_size}\n",
+    "            <br />地理位置：{location}\n",
+    "          </span>\n",
+    "        </div>\n",
+    "      </div>\n",
+    "      <div class=\"music_9_66\">\n",
+    "        <div class=\"music_9_67\">\n",
+    "          <span class=\"music_9_67_0_52\">{summary}</span>\n",
+    "          <span class=\"music_9_67_52_53\">。</span>\n",
+    "        </div>\n",
+    "        <div class=\"music_9_71\"></div>\n",
+    "      </div>\n",
+    "      <div class=\"music_9_003\">\n",
+    "        <div class=\"music_9_004\">\n",
+    "          <span class=\"music_9_004_0_9\">樂 Problem</span>\n",
+    "          <span class=\"music_9_004_9_10\">m</span>\n",
+    "        </div>\n",
+    "        <div class=\"music_9_008\">\n",
+    "          <span class=\"music_9_009_0_99\">{problem}</span>\n",
+    "        </div>\n",
+    "      </div>\n",
+    "      <div class=\"music_9_013\">\n",
+    "        <div class=\"music_9_014\">\n",
+    "          <span class=\"music_9_014_0_10\">類 Solution</span>\n",
+    "          <span class=\"music_9_014_10_11\">n</span>\n",
+    "        </div>\n",
+    "        <div class=\"music_9_018\">\n",
+    "          <span class=\"music_9_019_0_129\">{solution}</span>\n",
+    "        </div>\n",
+    "      </div>\n",
+    "      <div class=\"music_9_023\">\n",
+    "        <span class=\"music_9_024\">YC S2024 项目整理 | 特工宇宙</span>\n",
+    "        <img\n",
+    "          class=\"music_9_028\"\n",
+    "          src=\"data:image/png;base64,{agent_logo_base64}\" />\n",
+    "      </div>\n",
+    "    </div>\n",
+    "  </body>\n",
+    "</html>\"\"\".format(\n",
+    "        logo_base64=logo_base64,\n",
+    "        agent_logo_base64=agent_logo_base64,\n",
+    "        font_base64=font_base64,\n",
+    "        company_name=company_name,\n",
+    "        established_year=established_year,\n",
+    "        team_size=team_size,\n",
+    "        location=location,\n",
+    "        summary=summary,\n",
+    "        problem=problem,\n",
+    "        solution=solution\n",
+    "    )\n",
+    "    return html_template\n",
+    "\n",
+    "logo_base64 = \"你的公司logo base64字符串\"\n",
+    "agent_logo_base64 = \"特工宇宙logo base64字符串\"\n",
+    "font_base64 = \"字体文件 base64字符串\"\n",
+    "established_year = \"\"\n",
+    "team_size = \"\"\n",
+    "location = \"\"\n",
+    "summary = \"\"\n",
+    "problem = \"\"\n",
+    "solution = \"\"\n",
+    "def handler(args: Args[Input])->Output:\n",
+    "    logo_base64 = args.input.logo_base64\n",
+    "    agent_logo_base64 = args.input.agent_logo_base64\n",
+    "    font_base64 = args.input.font_base64\n",
+    "    company_name = args.input.company_name\n",
+    "    established_year = args.input.established_year\n",
+    "    team_size = args.input.team_size\n",
+    "    location = args.input.location\n",
+    "    summary = args.input.summary\n",
+    "    problem = args.input.problem\n",
+    "    solution = args.input.solution\n",
+    "    html_content = generate_html(logo_base64, agent_logo_base64, font_base64,company_name, established_year, team_size, location, summary, problem, solution)    \n",
+    "    \n",
+    "    return {\"html_content\":html_content}\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -628,6 +745,42 @@
     "\n",
     "请运行 screenshot.js（需要安装 puppeteer）"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jamiu/miniconda3/envs/all38/lib/python3.8/site-packages/pyppeteer/util.py:29: RuntimeWarning: coroutine 'run_browser' was never awaited\n",
+      "  gc.collect()\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
+     ]
+    },
+    {
+     "ename": "BrowserError",
+     "evalue": "Browser closed unexpectedly:\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mBrowserError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 51\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[38;5;28;01mawait\u001b[39;00m browser\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m     50\u001b[0m \u001b[38;5;66;03m# 运行截图程序\u001b[39;00m\n\u001b[0;32m---> 51\u001b[0m \u001b[43mcapture_screenshots\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[6], line 14\u001b[0m, in \u001b[0;36mcapture_screenshots\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcapture_screenshots\u001b[39m():\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;66;03m# 调用异步函数\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m     \u001b[43masyncio\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_event_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_until_complete\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrun_browser\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/all38/lib/python3.8/site-packages/nest_asyncio.py:98\u001b[0m, in \u001b[0;36m_patch_loop.<locals>.run_until_complete\u001b[0;34m(self, future)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m f\u001b[38;5;241m.\u001b[39mdone():\n\u001b[1;32m     96\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m     97\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEvent loop stopped before Future completed.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 98\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/all38/lib/python3.8/asyncio/futures.py:178\u001b[0m, in \u001b[0;36mFuture.result\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    176\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__log_traceback \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    177\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 178\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception\n\u001b[1;32m    179\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_result\n",
+      "File \u001b[0;32m~/miniconda3/envs/all38/lib/python3.8/asyncio/tasks.py:280\u001b[0m, in \u001b[0;36mTask.__step\u001b[0;34m(***failed resolving arguments***)\u001b[0m\n\u001b[1;32m    276\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    277\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m exc \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    278\u001b[0m         \u001b[38;5;66;03m# We use the `send` method directly, because coroutines\u001b[39;00m\n\u001b[1;32m    279\u001b[0m         \u001b[38;5;66;03m# don't have `__iter__` and `__next__` methods.\u001b[39;00m\n\u001b[0;32m--> 280\u001b[0m         result \u001b[38;5;241m=\u001b[39m \u001b[43mcoro\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msend\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    281\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    282\u001b[0m         result \u001b[38;5;241m=\u001b[39m coro\u001b[38;5;241m.\u001b[39mthrow(exc)\n",
+      "Cell \u001b[0;32mIn[6], line 18\u001b[0m, in \u001b[0;36mrun_browser\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrun_browser\u001b[39m():\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;66;03m# 启动浏览器，指定自定义 Chrome 路径\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m     browser \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m launch(executablePath\u001b[38;5;241m=\u001b[39mchrome_driver_path_bin, headless\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     19\u001b[0m     page \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m browser\u001b[38;5;241m.\u001b[39mnewPage()\n\u001b[1;32m     21\u001b[0m     output_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mposter_png\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "File \u001b[0;32m~/miniconda3/envs/all38/lib/python3.8/site-packages/pyppeteer/launcher.py:307\u001b[0m, in \u001b[0;36mlaunch\u001b[0;34m(options, **kwargs)\u001b[0m\n\u001b[1;32m    239\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mlaunch\u001b[39m(options: \u001b[38;5;28mdict\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: Any) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Browser:\n\u001b[1;32m    240\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Start chrome process and return :class:`~pyppeteer.browser.Browser`.\u001b[39;00m\n\u001b[1;32m    241\u001b[0m \u001b[38;5;124;03m    This function is a shortcut to :meth:`Launcher(options, **kwargs).launch`.\u001b[39;00m\n\u001b[1;32m    242\u001b[0m \u001b[38;5;124;03m    Available options are:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    305\u001b[0m \u001b[38;5;124;03m        option with extreme caution.\u001b[39;00m\n\u001b[1;32m    306\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 307\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mawait\u001b[39;00m Launcher(options, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\u001b[38;5;241m.\u001b[39mlaunch()\n",
+      "File \u001b[0;32m~/miniconda3/envs/all38/lib/python3.8/site-packages/pyppeteer/launcher.py:168\u001b[0m, in \u001b[0;36mLauncher.launch\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    165\u001b[0m         signal\u001b[38;5;241m.\u001b[39msignal(signal\u001b[38;5;241m.\u001b[39mSIGHUP, _close_process)\n\u001b[1;32m    167\u001b[0m connectionDelay \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mslowMo\n\u001b[0;32m--> 168\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbrowserWSEndpoint \u001b[38;5;241m=\u001b[39m \u001b[43mget_ws_endpoint\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43murl\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    169\u001b[0m logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBrowser listening on: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbrowserWSEndpoint\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    170\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconnection \u001b[38;5;241m=\u001b[39m Connection(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbrowserWSEndpoint, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_loop, connectionDelay, )\n",
+      "File \u001b[0;32m~/miniconda3/envs/all38/lib/python3.8/site-packages/pyppeteer/launcher.py:227\u001b[0m, in \u001b[0;36mget_ws_endpoint\u001b[0;34m(url)\u001b[0m\n\u001b[1;32m    225\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m (\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m    226\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m>\u001b[39m timeout:\n\u001b[0;32m--> 227\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m BrowserError(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBrowser closed unexpectedly:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    228\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    229\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m urlopen(url) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
+      "\u001b[0;31mBrowserError\u001b[0m: Browser closed unexpectedly:\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
